Fixed issue with subtitle text breaks on mobile profile, view lists.

--- a/web/assets/css/bootstrap.css
+++ b/web/assets/css/bootstrap.css
@@ -3993,7 +3993,7 @@ textarea {
   .divider {
     padding-bottom: 1em; }
 
-  .list-subtitle {
+  .list-subtitle a {
     word-break: break-all; }
 
   .complete-account-wrapper {
