--- a/web/assets/css/bootstrap/_user-profiles.scss
+++ b/web/assets/css/bootstrap/_user-profiles.scss
@@ -259,7 +259,7 @@
       padding-bottom: 1em;
   }
 
-  .list-subtitle {
+  .list-subtitle a {
     word-break: break-all;
   }
 
